--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- 
-    <title>Vite + React</title>
+
+    <title>MovieHeist</title>
   </head>
   <body>
     <div id="root"></div>
