--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
  
-    <title>Vite + React</title>
+    <title>Movie Heist</title>
   </head>
   <body>
     <div id="root"></div>
